[package]
name = "mrkl"
version = "0.0.1-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"

[features]
default = ["digest", "parallel"]
digest = ["digest-hash"]
parallel = ["rayon"]

[dependencies.digest-hash]
version = "0.1"
optional = true

[dependencies.rayon]
version = "0.9"
optional = true

[dev-dependencies]
sha2 = "0.7"
