[package]
name = "mrkl"
version = "0.0.1"
description = "Generic, minimalist, parallelizable Merkle tree"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
repository = "https://github.com/mzabaluev/mrkl"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["cryptography", "data-structures"]
keywords = ["Merkle tree", "hash tree"]

[features]
default = ["digest", "parallel", "serialization"]
digest = ["digest-hash"]
parallel = ["rayon"]
serialization = ["serde", "serde_derive", "generic-array/serde"]

[dependencies]
generic-array = "0.9"

[dependencies.digest-hash]
version = "0.1"
optional = true

[dependencies.rayon]
version = "0.9"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dev-dependencies]
sha2 = "0.7"
serde_json = "1.0"
