[package]
name = "mrkl"
version = "0.0.4"
description = "Generic, minimalist, parallelizable Merkle tree"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
repository = "https://github.com/mzabaluev/mrkl"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["cryptography", "data-structures"]
keywords = ["merkletree", "hashtree"]

[features]
default = ["digest", "parallel", "serialization"]
digest = ["digest-hash"]
parallel = ["rayon"]
serialization = ["serde", "serde_derive", "generic-array/serde"]

[dependencies]
generic-array = "0.12"

[dependencies.digest-hash]
version = "0.3"
optional = true

[dependencies.rayon]
version = "1.0"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dev-dependencies]
sha2 = "0.8"
serde_json = "1.0"
